--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: sans-serif;
-    font-style: 14px;
+    font-style: 12px;
     text-align: center;
 }
 
@@ -123,7 +123,7 @@ body {
 }
 
 .app-download:nth-child(1) {
-    background-image: url('./img/applestore-button.png');
+    background-image: url('./img/applestore-button.jpg');
 }
 
 .app-download:nth-child(2) {
